# ton-bot

./: .gitignore  alembic.ini  bot.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024-03-24.py  2024-03-27.py
src/accounts/: _accounts.py
src/bot/: __init__.py
src/bot/dialogs/: __init__.py  _dialogs.py  _exceptions.py
src/bot/dialogs/app/: __init__.py  _app.py  _states.py
src/bot/dialogs/jetton/: __init__.py  _jetton.py  (+2 more)
src/bot/handlers/: __init__.py  _app.py  _contract.py  _jetton.py  _menu.py  _nft.py  _settings.py  _start.py  _token.py  _wallet.py
src/bot/keyboards/: __init__.py  _app_kb.py  _contract_kb.py  _jetton_kb.py  _menu_kb.py  _nft_kb.py  _settings_kb.py  _tokens_kb.py  _wallet_kb.py
src/bot/middleware/: __init__.py  _antiflood.py  _thottling.py
src/common/: __init__.py  _config.py  _constants.py  _redis.py
src/contract/: _github.py
src/database/: __init__.py  _models.py
src/jetton/: _gecko.py  _models.py
src/nft/: __init__.py  _getgems.py  _models.py  _nft.py
src/repos/: __init__.py  _app.py  _jetton.py
src/services/accounts/: __init__.py  _accounts.py
src/services/app/: __init__.py  _app.py  _models.py
src/services/contract/: __init__.py  _contract.py
src/services/jetton/: __init__.py  _jetton.py  _models.py
src/services/nft/: __init__.py  _models.py  _nft.py
src/services/ton/: _connector.py  _provider.py  _transfer.py
src/token/: __init__.py  _gecko.py  _jetton.py  _models.py
src/ton/: __init__.py  _connector.py  _storage.py  _transaction.py  _transfer.py
src/utils/: formatters.py  messages.py
(+4 files in other folders)
