[tool.poetry]
name = "ton-bot"
version = "0.1.0"
description = ""
authors = ["Kkkasum <kasum2605@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
pytoniq-core = "^0.1.31"
pytonapi = "^0.2.0"
loguru = "^0.7.2"
gql = "^3.5.0"
redis = "^5.0.2"
pytonconnect = "^0.3.0"
qrcode = "^7.4.2"
aiogram-dialog = "^2.1.0"
pytoniq = "^0.1.34"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
